# tess

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/fonts/: config.json
data/: Cargo.toml
data/src/: aggr.rs  audio.rs  chart.rs  config.rs  layout.rs  lib.rs  log.rs  util.rs
data/src/aggr/: ticks.rs  time.rs
data/src/chart/: heatmap.rs  indicator.rs  indicators.rs  kline.rs  timeandsales.rs
data/src/config/: sidebar.rs  state.rs  theme.rs  timezone.rs
data/src/layout/: dashboard.rs  pane.rs
exchange/: Cargo.toml
exchange/src/: adapter.rs  connect.rs  depth.rs  fetcher.rs  lib.rs  limiter.rs
exchange/src/adapter/: binance.rs  bybit.rs
exchanges/: Cargo.toml
exchanges/src/: adapter.rs  lib.rs
exchanges/src/adapter/: binance.rs  bybit.rs
scripts/: build-macos.sh  build-windows.sh  package-linux.sh
src/: aggr.rs  audio.rs  chart.rs  charts.rs  data_providers.rs  fetcher.rs  layout.rs  logger.rs  main.rs  modal.rs  screen.rs  style.rs  tickers_table.rs  tooltip.rs  widget.rs  window.rs
src/aggr/: ticks.rs  time.rs
src/chart/: candlestick.rs  config.rs  footprint.rs  heatmap.rs  indicator.rs  kline.rs  scale.rs  study.rs  timeandsales.rs
src/chart/indicator/: funding_rate.rs  open_interest.rs  volume.rs
src/chart/scale/: linear.rs  timeseries.rs
src/charts/: candlestick.rs  config.rs  footprint.rs  heatmap.rs  indicators.rs  scales.rs  timeandsales.rs
src/charts/indicators/: open_interest.rs  volume.rs
src/charts/scales/: linear.rs  timeseries.rs
src/data_providers/: aggr.rs  binance.rs  bybit.rs  fetcher.rs
src/data_providers/aggr/: ticks.rs  time.rs
src/fonts/: config.json
src/modal/: audio.rs  layout_manager.rs  pane.rs  study.rs  theme_editor.rs
src/modal/pane/: indicators.rs  settings.rs  stream.rs
src/screen/: dashboard.rs  modal.rs  sidebar.rs  theme_editor.rs
src/screen/dashboard/: pane.rs  panel.rs  sidebar.rs  theme_editor.rs  tickers_table.rs
src/screen/dashboard/panel/: timeandsales.rs
src/widget/: color_picker.rs  column_drag.rs  decorate.rs  hsplit.rs  multi_split.rs  notification.rs  toast.rs
