[package]
name = "flowsurface"
version = "0.6.1"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
categories = ["finance", "visualization", "gui"]
repository = "https://github.com/akenshaw/flowsurface"

[workspace]
members = [ "data", "exchange"]

[workspace.dependencies]
iced_futures = "0.13.2"
iced_core = "0.14.0-dev"
chrono = { version = "0.4.40", features = ['serde'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
thiserror = "2.0.12"
ordered-float = "5.0.0"
regex = "1.11.1"
rust_decimal = "1.36.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies]
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wgpu", 
    "lazy", 
    "tokio", 
    "canvas",
    "sipper",
    "advanced",
    "unconditional-rendering",
] }
iced_core.workspace = true
iced_futures.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
ordered-float.workspace = true
log.workspace = true
uuid.workspace = true
fern = "0.7.1"

exchange = { version = "0.1.0", path = "exchange" }
data = { version = "0.1.0", path = "data" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "cd27dae8abdecc5ff751e1e201ade79bc6b8e23a" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "cd27dae8abdecc5ff751e1e201ade79bc6b8e23a", package = "iced_core" }

