[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
ordered-float.workspace = true
log.workspace = true
thiserror.workspace = true
regex.workspace = true
dirs-next = "2.0.0"

exchanges = { version = "0.1.0", path = "../exchanges" }