[package]
name = "exchanges"
version = "0.1.0"
edition = "2024"

[dependencies]
iced_futures.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
ordered-float.workspace = true
regex.workspace = true
uuid.workspace = true

tokio = { version = "1.43", features = ["macros"] }
reqwest = { version = "0.12.9", features = ["json"] }
bytes = "1.8.0"
sonic-rs = "0.4.0"
fastwebsockets = { version = "0.9.0", features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.10" }
tokio-rustls = "0.24.1"
webpki-roots = "0.23.1"
zip = "2.3.0"
csv = "1.3.1"